perflab/elastic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
  - host: "perflab-elastic.perf.msap.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: perflab-es-http
            port:
              number: 9200
