perflab/litmus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litmus-ingress
  namespace: litmus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
    - host: "perflab-litmus.perf.msap.io"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: chaos-litmus-frontend-service
                port:
                  number: 9091
          - backend:
              service:
                name: chaos-litmus-server-service
                port:
                  number: 9002
            path: /backend/(.*)
            pathType: ImplementationSpecific
